--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Welcome to my blog</h1>
     <h2>Today is a rainy day</h2>
+    <p><a href="https://nea.gov.sg">Link to NEA's website</a></body></p>
+    <a href="https://techup.live" class=”>Check out past apps</a>
 </body>
 </html>
